--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       context: .
       dockerfile: Dockerfile
     working_dir: /usr/src/app/dds_manager
-    command: sh -c "python manage.py collectstatic --noinput && python manage.py migrate && gunicorn dds_manager.wsgi:application --bind 0.0.0.0:8000"
+    command: sh -c "python manage.py migrate && gunicorn dds_manager.wsgi:application --bind 0.0.0.0:8000"
     restart: always
     env_file:
       - .env
